Major designer update (#1742)
* Plain Concepts’ PR with the Adaptive Cards designer. (#1722)

* fixed bug

* Updated package.json

* basic tree view

* update package.json

* Updated types

* Set selected item color

* Added actions to treeview

* Select peer in treeview

* Changed hardcoded comparations

* Fixed function definition

* fixed selecter peer on drag element

* Basic list style (#4)

* Feature/treeview folding (#5)

* Basic list style

* treeview folding

* Added rotated arrow (#6)

* Added rotated arrow

* Fixed quotation marks and removed console.log

* Feature/elements add icons (#7)

* Element icons class

* Added icons and section-header component

* Finished 51472: [UI] + [Functionality] View tree view

* Moved treeview to a new class

* Fixed build crash (#8)

* Added copy to clipboard functionality (#9)

* Added copy to clipboard functionality

* Removed Add New Card button from HTML

* Update tree view from json (#10)

* Refactored fullscreen functionality and added CopyJSON (#11)

* Refactored fullscreen functionality and added CopyJSON

* Removed unnecesary console.logs

* Finished navbar (#12)

* Added aside-items styles (#13)

* Added aside-items styles

* Added icon date

* Moved functions to utils

* Finished aside (#14)

* Finished aside

* Fixed toolbox title

* Feature/aside titles (#15)

* Finished aside

* Fixed toolbox title

* Maded aside toggleable

* Fixed toolbox when toggled

* Small class refactor

* Finished treeview togglable

* Maded properties panel togglable

* Added missing icons, optimized old icons and added needed CSS to view new icons

* Moved toggle toolbox, treeview and properties funcionality to app.ts and refactored element properties cleaning

* Removed .png icons and added .svg icons (#16)

* Feature/element properties styles (#17)

* Changed some element property styles

* Finished properties panel

* Fi

--- a/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
+++ b/source/nodejs/adaptivecards-designer/css/adaptivecards-default.css
@@ -29,15 +29,18 @@ a.default-ac-anchor:visited:active {
     color: #004D84;
 }
 
-.default-ac-container.default-ac-selectable, .default-ac-columnSet.default-ac-selectable {
-    padding: 0px;
+.default-ac-container.default-ac-selectable,
+.default-ac-columnSet.default-ac-selectable {
+    padding: 0;
 }
 
-.default-ac-container.default-ac-selectable:hover, .default-ac-columnSet.default-ac-selectable:hover {
+.default-ac-container.default-ac-selectable:hover,
+.default-ac-columnSet.default-ac-selectable:hover {
     background-color: rgba(0, 0, 0, 0.1) !important;
 }
 
-.default-ac-container.default-ac-selectable:active, .default-ac-columnSet.default-ac-selectable:active {
+.default-ac-container.default-ac-selectable:active,
+.default-ac-columnSet.default-ac-selectable:active {
     background-color: rgba(0, 0, 0, 0.15) !important;
 }
 
@@ -120,11 +123,27 @@ a.default-ac-anchor:visited:active {
     height: 72px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput {
     height: 31px;
 }
 
-.default-ac-input.default-ac-textInput, .default-ac-input.default-ac-numberInput, .default-ac-input.default-ac-dateInput, .default-ac-input.default-ac-timeInput, .default-ac-input.default-ac-multichoiceInput {
+.default-ac-input.default-ac-textInput,
+.default-ac-input.default-ac-numberInput,
+.default-ac-input.default-ac-dateInput,
+.default-ac-input.default-ac-timeInput,
+.default-ac-input.default-ac-multichoiceInput {
     border: 1px solid #DDDDDD;
     padding: 4px 8px 4px 8px;
+}
+
+.default-ac-textBlock {
+    cursor: default;
+}
+
+.default-ac-textBlock.default-ac-selectable:hover {
+    color: #3A96DD !important;
+    cursor: pointer;
 }
