--- a/source/nodejs/adaptivecards-designer/css/card-designer.css
+++ b/source/nodejs/adaptivecards-designer/css/card-designer.css
@@ -1,3 +1,121 @@
+/*
+    Miscellaneous
+*/
+
+.acd-designersurface {
+    outline: none;
+}
+
+.acd-hidden {
+    display: none !important;
+}
+
+.acd-treeView-pane {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    width: 360px;
+    height: 100%;
+}
+
+.acd-treeView-host {
+    flex: 1 1 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-top: 6px;
+    background-color: white;
+}
+
+.acd-propertySheet-pane {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    width: 360px;
+    height: 100%;
+    background-color: #F9F9F9;
+}
+
+.acd-propertySheet-host {
+    flex: 1 1 100%;
+    overflow: auto;
+}
+
+.acd-vertical-splitter {
+    flex: 0 0 6px;
+    background-color: #EEEEEE;
+    border-left: 1px solid #D2D2D2;
+    border-right: 1px solid #D2D2D2;
+    cursor: ew-resize;
+}
+
+.acd-horizontal-splitter {
+    flex: 0 0 6px;
+    background-color: #EEEEEE;
+    border-top: 1px solid #D2D2D2;
+    border-bottom: 1px solid #D2D2D2;
+    cursor: ns-resize;
+}
+
+.acd-json-editor-pane {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    height: 360px;
+}
+
+.acd-json-editor-host {
+    flex: 1 1 100%;
+}
+
+.acd-error-pane {
+    flex: 0 0 65px;
+    color: white;
+    background-color: #3a96dd;
+    border-top: 1px solid #D2D2D2;
+    padding: 4px 8px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space: nowrap;
+}
+
+/*
+    In-place editors
+*/
+
+.acd-inplace-editor-host {
+    box-sizing: content-box;
+    position: absolute;
+    display: flex;
+    margin: -1px;
+    border: 1px dashed red;
+    background-color: white;
+}
+
+.acd-inplace-editor {
+    flex: 1 1 100%;
+    align-items: stretch;
+}
+
+.acd-textBlock-inplace-editor {
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    resize: none;
+    color: black !important;
+}
+
+/*
+    Icons
+*/
+
+.acd-icon {
+    font-family: 'FabricMDL2Icons';
+    font-size: 14px;
+    font-style: normal;
+    font-weight: normal;
+}
+
 .acd-icon-bolt::before {
     content: "\E945";
 }
@@ -18,8 +136,190 @@
     content: "\ECAB";
 }
 
-.acd-designersurface {
-    outline: none;
+.acd-icon-adaptiveCard::before {
+    content: "\EEBD";
+}
+
+.acd-icon-column::before {
+    content: "\E799";
+}
+
+.acd-icon-columnSet::before {
+    content: "\F1D5";
+}
+
+.acd-icon-container::before {
+    content: "\E739";
+}
+
+.acd-icon-factSet::before {
+    content: "\F2A2";
+}
+
+.acd-icon-image::before {
+    content: "\EB9F";
+}
+
+.acd-icon-imageSet::before {
+    content: "\E7AA";
+}
+
+.acd-icon-inputChoiceSet::before {
+    content: "\F2C7";
+}
+
+.acd-icon-inputDate::before {
+    content: "\E787";
+}
+
+.acd-icon-inputNumber::before {
+    content: "\EDC4";
+}
+
+.acd-icon-inputText::before {
+    content: "\EDC3";
+}
+
+.acd-icon-inputTime::before {
+    content: "\E917";
+}
+
+.acd-icon-inputToggle::before {
+    content: "\E73A";
+}
+
+.acd-icon-textBlock::before {
+    content: "\E8E9";
+}
+
+.acd-icon-chevronDown::before {
+    content: "\E70D";
+}
+
+.acd-icon-chevronUp::before {
+    content: "\E70E";
+}
+
+.acd-icon-chevronRight::before {
+    content: "\E76C";
+}
+
+.acd-icon-chevronLeft::before {
+    content: "\E76B";
+}
+
+.acd-icon-newCard::before {
+    content: "\F321";
+}
+
+.acd-icon-fullScreen::before {
+    content: "\E740";
+}
+
+.acd-icon-actionShowCard::before {
+    content: "\EEBD";
+}
+
+.acd-icon-actionOpenUrl::before {
+    content: "\E71B";
+}
+
+.acd-icon-actionSubmit::before {
+    content: "\E73E";
+}
+
+.acd-icon-actionToggleVisibility::before {
+    content: "\E7B3";
+}
+
+.acd-icon-actionHttp::before {
+    content: "\E774";
+}
+
+.acd-icon-copy::before {
+    content: "\E8C8";
+}
+
+.acd-icon-header-expanded::before {
+    content: "\F166";
+}
+
+.acd-icon-header-collapsed::before {
+    content: "\F164";
+}
+
+.acd-icon-undo::before {
+    content: "\E7A7";
+}
+
+.acd-icon-redo::before {
+    content: "\E7A6";
+}
+
+/*
+    Side panes
+*/
+
+.acd-verticalCollapsedTabContainer {
+    max-width: 32px;
+    overflow-x: hidden;
+}
+
+.acd-sidePane-header {
+    height: 32px;
+    background-color: #EEEEEE;
+    cursor: default;
+}
+
+.acd-sidePane-header.rotated90DegreesClockwise {
+    width: 32px;
+    height: 170px;
+    border-bottom: 1px solid #D2D2D2;
+}
+
+.acd-sidePane-header.rotated90DegreesCounterClockwise {
+    width: 32px;
+    height: 170px;
+    border-bottom: 1px solid #D2D2D2;
+}
+
+.acd-sidePane-header-content {
+    height: 100%;
+    padding: 4px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.acd-sidePane-header-content.rotated90DegreesClockwise {
+    width: 170px;
+    height: 32px;
+    transform-origin: 0 100%;
+    transform: rotate(90deg) translate(-32px, 0px);
+}
+
+.acd-sidePane-header-content.rotated90DegreesCounterClockwise {
+    width: 170px;
+    height: 32px;
+    transform-origin: 0 0;
+    transform: rotate(-90deg) translate(-170px, 0px);
+}
+
+.acd-sidePane-header-title {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+
+.acd-sidePane-header-expandCollapseButton {
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 4px;
+}
+
+.acd-sidePane-header-status {
+    margin-left: 4px;
 }
 
 .acd-designersurface.dragging {
@@ -29,6 +329,34 @@
 .acd-designersurface.dragging > .acd-peer:hover {
     background-color: transparent;
     border-color: transparent;
+}
+
+/*
+    Designer peers
+*/
+
+.acd-peer {
+    border: 1px solid transparent;
+}
+
+.acd-peer:hover {
+    border: 1px solid blue;
+}
+
+.acd-peer.selected {
+    border: solid 1px red;
+}
+
+.acd-peer.dragover {
+    border: 1px dashed green !important;
+}
+
+.acd-peer.dragover:hover {
+    background-color: none;
+}
+
+.acd-peer.dragging:hover {
+    border: 1px solid green;
 }
 
 .acd-peerButton {
@@ -49,64 +377,151 @@
     user-select: none;
 }
 
-.acd-circularButton {
-    border-radius: 50%;
-}
-
 .acd-peerButton:hover {
     background-color: red;
     color: white;
 }
 
-.acd-peerButton:active {
-    background-color: firebrick;
-    border: 1px solid firebrick;
-    color: white;
+/*
+    Tool box
+*/
+
+.acd-palette-category {
+    align-items: center;
+    color: #4a4a4a;
+    display: flex;
+    font-size: 14px;
+    font-weight: 600;
+    list-style-type: none;
+    position: relative;
+    white-space: nowrap;
+    padding: 4px 16px 4px 16px;
+    cursor: default;
+}
+
+.acd-palette-category::after {
+    border-bottom: 1px solid #e0e0e0;
+    content: "";
+    margin-bottom: -3px;
+    margin-left: 8px;
+    width: 100%;
 }
 
 .acd-palette-item {
-    border: 1px solid #CCCCCC;
-    padding: 8px;
-    margin-bottom: 4px;
-    background-color: white;
-    cursor: default;
+    cursor: move;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4px 16px 4px 16px;
+}
+
+.acd-palette-item-label {
+    font-size: 14px;
+    white-space: nowrap;
+    margin-left: 8px;
+    flex: 1 1 100%;
 }
 
 .acd-palette-item:hover {
     background-color: #EEEEEE;
 }
 
-.acd-peer {
+/*
+    Visual tree view
+*/
+
+.acd-tree-item {
+    cursor: pointer;
+}
+
+.acd-tree-item.selected {
+    background-color: #BCE2FF;
+}
+
+.acd-tree-item:hover {
+    background-color: #EEEEEE;
+}
+
+.acd-tree-item.selected:hover {
+    background-color: #A3D8FF;
+}
+
+.acd-tree-item-expandCollapseButton {
+    font-family: 'FabricMDL2Icons';
+    font-size: 10px;
+}
+
+.acd-tree-item-text {
+    user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    padding: 4px 4px 4px 8px;
+}
+
+.acd-tree-item-typeName {
+    margin-left: 8px;
+}
+
+.acd-tree-item-additionalText {
+    color: gray;
+    margin-left: 8px;
+}
+
+/*
+    Toolbar
+*/
+
+.acd-toolbar {
+    display: flex;
+    flex: 0 0 auto;
+    background-color: #F1F1F1;
+    align-items: center;
+    border-bottom: 1px solid #D2D2D2;
+}
+
+.acd-toolbar-separator {
+    width: 1px;
+    height: 30px;
+    border-left: 1px solid #D2D2D2;
+}
+
+.acd-toolbar-button {
+    font-family: 'Segoe UI', sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    padding: 10px;
     border: 1px solid transparent;
+    font-style: normal;
+    font-weight: normal;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: default;
+    user-select: none;
+    background-color: transparent;
 }
 
-.acd-peer:hover {
-    border: 1px solid blue;
+.acd-toolbar-button:hover {
+    background-color: white;
 }
 
-.acd-peer.selected {
-    border: 1px solid red !important;
+.acd-toolbar-button:active {
+    border: 1px solid black;
 }
 
-.acd-peer.dragover {
-    border: 1px dashed green !important;
+.acd-toolbar-button:disabled {
+    color: lightgray;
+    background-color: transparent;
 }
 
-.acd-peer.dragover:hover {
-    background-color: none;
+.acd-toolbar-button-iconOnly::before {
+    margin-right: 0 !important;
 }
 
-.acd-peer.dragging {
+.acd-toolbar-button::before {
+    font-family: 'FabricMDL2Icons';
+    font-size: 20px;
+    margin-right: 8px;
 }
 
-.acd-peer.dragging:hover {
-    border: 1px solid green;
-}
-
-.acd-separation {
-    background-color: rgba(0, 0, 255, 0.2);
-}
-
-.acd-separation.selected {
-    background-color: rgba(255, 0, 0, 0.2);
-}
